--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -109,21 +109,24 @@
 
             <div class="card">
                <div class="card-body">
-
-                 <form hx-post="{% url 'ai_experience_tasks' %}" hx-vals="{exp_id: document.getElementById('exp_id').value}">
-                    <select name="exp_id" id="exp_id" class="form-select">
+                 <form hx-post="{% url 'ai_experience_tasks' %}"
+                       hx-vals="{exp_id: document.getElementById('exp_id').value}"
+                       hx-target="#ai-exp-tasks"
+                       hx-swap="innerHTML">
+                     <label for="exp_id"></label>
+                     <select name="exp_id" id="exp_id" class="form-select">
                         {% for exp in exps %}
                         <option value="{{ exp.id }}">{{ exp.company }}</option>
                         {% endfor %}
                     </select>
 
+                     <div class="d-flex justify-content-end">
                     <button
                       id="jeffrey-exp-button"
-                      hx-target="#ai-exp-tasks"
-                      hx-swap="innerHTML"
                       class="btn md-yellow-button mb-2">
-                    Jeffrey
+                        Jeffrey
                     </button>
+                     </div>
                 </form>
                    <div id="ai-exp-tasks"></div>
                </div>
