Enhance task generation and display in ai_experience_tasks
Upgraded the task generation process in the ai_experience_tasks function to use OpenAI for descriptive improvements. Modified the ai_experience_tasks HTML template to enumerate tasks dynamically. In addition, included the capability to save enhanced tasks into the corresponding Experience attributes.

--- a/users/templates/ai_experience_tasks.html
+++ b/users/templates/ai_experience_tasks.html
@@ -1,1 +1,6 @@
-List AI generated tasks here for {{ exp_id }}
+
+<div class="mt-3">
+    {% for task in tasks %}
+    <p>{{ task }} - copy</p>
+    {% endfor %}
+</div>
