Update AI experience tasks and implement caching
Several changes were made to task handling and the caching mechanism was added. Improvements on the task confirm feature were made in the ai_resume.html, and the option to update tasks was added in ai_experience_tasks.html. The caching mechanism was implemented in the settings.py. Updates were also made in the views.py to generate and render tasks, and in urls.py to provide a new route for the update feature.

--- a/users/templates/ai_experience_tasks.html
+++ b/users/templates/ai_experience_tasks.html
@@ -4,3 +4,13 @@
     <p>{{ task }} - copy</p>
     {% endfor %}
 </div>
+
+<div class="d-flex justify-content-end">
+   <button
+        hx-post="{% url 'ai_experience_update' tasks %}"
+        hx-target="#ai_exp_updated"
+        hx-swap="innerHTML"
+        class="btn md-yellow-button mb-2">
+       Update
+   </button>
+</div>
