--- a/users/templates/ai_experience_tasks.html
+++ b/users/templates/ai_experience_tasks.html
@@ -1,16 +1,15 @@
 
 <div class="mt-3">
     {% for task in tasks %}
-    <p>{{ task }} - copy</p>
+    <p>{{ task }}</p>
     {% endfor %}
 </div>
 
 <div class="d-flex justify-content-end">
-   <button
-        hx-post="{% url 'ai_experience_update' tasks %}"
-        hx-target="#ai_exp_updated"
-        hx-swap="innerHTML"
-        class="btn md-yellow-button mb-2">
-       Update
-   </button>
+    <form action="{% url 'ai_experience_update' exp_id %}" method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn md-yellow-button mb-2">
+           Update
+       </button>
+    </form>
 </div>
