--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -77,6 +77,7 @@
                    </p>
                    <hr />
                    <div class="d-flex justify-content-end">
+                       {% if ai_token %}
                        <button
                             id="jeffrey-about-button"
                             hx-get="{% url 'ai_about_me' %}"
@@ -86,6 +87,9 @@
                             onclick="disableJeffreyButton()">
                           Jeffrey
                       </button>
+                       {% else %}
+                        Tokens: 0
+                       {% endif %}
                    </div>
                    <div id="ai_about_me"></div>
                    <script>
@@ -120,11 +124,15 @@
                               </select>
                           </div>
                           <div class="col-2">
+                              {% if ai_token %}
                               <button
                                       class="btn md-yellow-button mt-3"
                                     onclick="ai_task_confirm()">
                                   Jeffrey
                               </button>
+                              {% else %}
+                                Tokens: 0
+                              {% endif %}
                           </div>
                       </form>
                       <script>
