Update navigation bar, improve portfolio image naming, and modify UI text
The "Article" section in the navigation bar has been commented out. The image naming for portfolio items has been enhanced by including 'port' as prefix for better identification. The text in portfolio links is updated to open in new tab, and language for displaying token balance has been refined for clarity.

--- a/website/templates/user_page/portfolio.html
+++ b/website/templates/user_page/portfolio.html
@@ -20,7 +20,7 @@
                         <div class="card-body">
                           <h5 class="card-title">{{ item.title }}</h5>
                           <p class="card-text">{{ item.description}}</p>
-                            <a href="{{ item.website_link }}">
+                            <a href="{{ item.website_link }}" target="_blank">
                                 <button class="btn btn-secondary float-end">View Website</button>
                             </a>
                         </div>
