--- a/website/templates/users/ai_info.html
+++ b/website/templates/users/ai_info.html
@@ -15,7 +15,7 @@
                 </p>
 
                 <p>
-                    Current token balance: {{ ai_token.amount }}
+                    Token balance: {{ ai_token.amount }}
                 </p>
           </div>
         </div>
