--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -30,7 +30,7 @@
                 <div class="col-md-4">
                  <input class="form-check-input" type="radio" name="searchType" value="userSearch" id="searchUsers">
                   <label class="form-check-label text-white" for="searchUsers">
-                    Search users
+                    Search For Talent
                   </label>
                 </div>
               </div>
