Add condition to display profile image
The template for editing personal info now checks if a profile image exists. A conditional statement has been added to only display the profile image if one is associated with the user's profile.

--- a/website/templates/edit_personalinfo.html
+++ b/website/templates/edit_personalinfo.html
@@ -82,11 +82,9 @@
                             <button type="submit" class="btn md-yellow-button">Save</button>
                         </div>
                     </div>
-
-
-
-
+                        {% if form.instance.profile_image %}
                         <img src="{{ form.instance.profile_image.url }}" class="card-img-top mt-2 mb-2" alt="Portfolio Image">
+                        {% endif %}
                 </div>
 
             </div>
