Update Sign Up link in inner-header template
The link for the Sign Up button in the inner-header.html template was set to direct to 'home'. The commit updated this link, it now correctly points to the 'register' page.

--- a/website/templates/inner-header.html
+++ b/website/templates/inner-header.html
@@ -62,7 +62,7 @@
           <a href="{% url 'logout' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Logout</a>
         {% else %}
           <a href="{% url 'login_page' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Login</a>
-          <a href="{% url 'home' %}" class="get-started-btn scrollto">Sign Up</a>
+          <a href="{% url 'register' %}" class="get-started-btn scrollto">Sign Up</a>
         {% endif %}
       </div>
   </div>
