Update job_listings.html to check job id availability
The tweak in job_listings.html template checks for the availability of a job ID before proceeding. This is necessary to avoid any issues when recruiter session value is False, yet the job ID associated doesn't exist. This safe-check reduces the potential for errors.

--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -90,7 +90,7 @@
                               <a href="{{ first.pii.linked_in }}" target="_blank">Linked In</a>
                           </p>
                         {% endif %}
-                            {% if request.session.recruiter == False %}
+                            {% if request.session.recruiter == False and first.job.id %}
                                 {% if first.saved_job %}
                                 <div id="removed-job">
                                  <button
