Handle exceptions in user search and update template
The code now handles exceptions when fetching the first user's resume information from search results in views.py. In the user_listings.html template, a message is added to display when no users are found. This improves the robustness of the search functionality and provides user-friendly feedback when no search results are found.

--- a/website/templates/user_listings.html
+++ b/website/templates/user_listings.html
@@ -136,12 +136,15 @@
                                     </div>
                                     {% else %}
                                     <div id="saved-user">
-                                    <button
-                                            hx-post="{% url 'save_user' first.pii.user.id %}"
-                                            hx-target="#saved-user"
-                                            hx-swap="innerHTML"
-                                            class="btn btn-primary"
-                                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Resume</button>
+                                        {% if first.pii.user.id %}
+                                        <button
+                                                hx-post="{% url 'save_user' first.pii.user.id %}"
+                                                hx-target="#saved-user"
+                                                hx-swap="innerHTML"
+                                                class="btn btn-primary"
+                                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Resume
+                                        </button>
+                                        {% endif %}
                                     </div>
                                     {% endif %}
                                     <div class="mt-2">
