Update templates to conditionally display phone field and rename education section
This commit updates several templates to add a condition to display the phone field only when it is available. It also renames the "Education" section to "Education/Certificates" in the 'ai_resume.html' template. This implementation will prevent rendering errors when the phone data is unavailable and provide a more accurate representation of user qualifications.

--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -23,7 +23,7 @@
                   </div>
               </div>
 
-            <h3>Education</h3>
+            <h3>Education/Certificates</h3>
               <div class="card">
                   <div class="card-body">
                       <button
