Change hx-swap attribute from "afterbegin" to "beforeend"
The hx-swap attribute in both 'add_education_submit' and 'add_experience_submit' buttons has been updated from "afterbegin" to "beforeend". These changes ensure that the new entries added will be positioned at the end of the list rather than at the beginning.

--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -29,7 +29,7 @@
                       <button
                               hx-get="{% url 'add_education_submit' %}"
                               hx-target="#edu-list"
-                              hx-swap="afterbegin"
+                              hx-swap="beforeend"
                               class="btn btn-success btn-sm mx-2">Add
                       </button>
                       <div id="query_result"
@@ -47,7 +47,7 @@
                        <button
                               hx-get="{% url 'add_experience_submit' %}"
                               hx-target="#exp-list"
-                              hx-swap="afterbegin"
+                              hx-swap="beforeend"
                               class="btn btn-success btn-sm mx-2">Add
                       </button>
 
