--- a/users/templates/ai_add_experience.html
+++ b/users/templates/ai_add_experience.html
@@ -1,4 +1,7 @@
-<div class="container">
+<div id="exp-add" class="mt-3">
+    <h5>Add Experience</h5>
+</div>
+<div class="container mt-3">
     <div class="row justify-content-center mt-3 mb-5">
         <div class="col-lg-12">
                 <div class="mb-3">
