Switched email sending to SendGrid and updated email failure instructions
The commit replaces the previous email sending functionality with SendGrid, introducing the SendGrid API key into the settings file. Additionally, it modifies the instructions presented to the user in case of email verification failure.

--- a/website/templates/email_verification_failure.html
+++ b/website/templates/email_verification_failure.html
@@ -6,7 +6,7 @@
   <div class="row justify-content-center mb-4">
     <div class="col-md-4">
         <p>Something has gone wrong with your email verification.</p>
-        <p>Please us our contact form and submit a support ticket. Include your email and user name.</p>
+        <p>Please contact us at chris@techartisanhub.com</p>
     </div>
   </div>
 </div>
