--- a/website/templates/add_personalinfo.html
+++ b/website/templates/add_personalinfo.html
@@ -8,10 +8,21 @@
                 {% csrf_token %}
                 <div class="row mb-3">
                     <div class="col">
+
+
+                   <div class="card border-secondary mb-3">
+                      <div class="card-header">Attention: Hiring Companies / Recruiters</div>
+                      <div class="card-body text-secondary">
+                        <p class="card-text">Please check recruiter option below to list your job openings.</p>
                         <div class="form-check">
                             {{ form.recruiter }}
                             <label class="form-check-label">Recruiter</label>
                         </div>
+                      </div>
+                    </div>
+
+
+
                     </div>
                 </div>
                 <div class="row g-3 mb-3">
