Update job listing template and recruiter navbar
Improved the placement of skills hint on both "edit_joblisting" and "add_joblisting" HTML templates, providing clearer instructions for recruiters. Modified the "recruiter_navbar" to incorporate a dropdown feature for recruiters' profile section, making it easier to toggle between viewing and editing the profile.

--- a/recruiters/templates/add_joblisting.html
+++ b/recruiters/templates/add_joblisting.html
@@ -8,6 +8,10 @@
 
                 <div class="card mb-3">
                     <div class="card-body">
+                        <div class="form-text mb-2">
+                            To find the best candidates, add skills you are looking for. These are the same skills
+                            that job seekers have on their resume. Example: Java, PHP, Python, React, DevOps ...
+                        </div>
                      <button
                               hx-get="{% url 'job_skill_add' %}"
                               hx-target="#add-job-skill"
