--- a/website/templates/edit_joblisting.html
+++ b/website/templates/edit_joblisting.html
@@ -8,6 +8,10 @@
 
              <div class="card mb-3">
                     <div class="card-body">
+                        <div class="form-text mb-2">
+                            To find the best candidates, add skills you are looking for. These are the same skills
+                            that job seekers have on their resume. Example: Java, PHP, Python, React, DevOps ...
+                        </div>
                      <button
                               hx-get="{% url 'job_skill_add' %}"
                               hx-target="#add-job-skill"
@@ -87,13 +91,7 @@
                         <span class="text-danger">{{ error }}</span>
                         {% endfor %}
                     </div>
-                    <div>
-                        <div class="form-text">
-                            To find the best candidates, add skills you are looking for. These are the same skills
-                            that job seekers have on their resume. Matching these skills with job seekers give you
-                            the best results.
-                        </div>
-                    </div>
+
                     <div class="d-flex justify-content-end">
                         <button type="submit" class="btn lg-button-yellow">Save</button>
                     </div>
