--- a/website/templates/recruiter_navbar.html
+++ b/website/templates/recruiter_navbar.html
@@ -7,8 +7,14 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/recruiter/profile">Profile</a>
+       <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Profile
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/recruiter/profile">View Profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'edit_personalinfo' user.id %}">Edit Profile</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/recruiter/applications">Applications</a>
