Add function to display skills list from session
A new function called list_session_skills has been introduced in recruiters/views.py. This function pulls job skills information from the user's session. The add_joblisting.html template and recruiters/urls.py have been updated accordingly to utilize this new function. This addition is expected to improve user experience by providing relevant skill information.

--- a/recruiters/templates/add_joblisting.html
+++ b/recruiters/templates/add_joblisting.html
@@ -21,7 +21,7 @@
                         <div id="skill-result"
                             hx-target="this"
                             hx-swap="innerHTML"
-                            hx-get="{% url 'get_job_skills' %}"
+                            hx-get="{% url 'list_session_skills' %}"
                             hx-trigger="load">
                       </div>
                     </div>
