--- a/website/templates/user_listings.html
+++ b/website/templates/user_listings.html
@@ -6,7 +6,7 @@
             {% for result in search_results %}
             <div class="card mb-4" style="max-width: 540px;">
                 <div class="row g-0">
-                    <div class="col-md-3 pt-3 ml-3">
+                    <div class="col-md-3 pt-3 ms-2">
                         <img src="../../media/{{ result.profile_image }}" width="100" height="100" />
                     </div>
                     <div class="col-md-8">
