--- a/website/templates/user_listings.html
+++ b/website/templates/user_listings.html
@@ -183,6 +183,12 @@
                                         </div>
                                     </form>
                             {% endif %}
+                            <a href="{% url 'user_page' userinfo.username %}" target="_blank">
+                            <button
+                                    class="btn btn-primary mt-2"
+                                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View User Page
+                            </button>
+                            </a>
                       </div>
               </div>
             </div>
