--- a/website/templates/user_resume.html
+++ b/website/templates/user_resume.html
@@ -147,10 +147,11 @@
                     </div>
                 </form>
         {% endif %}
-        <a href="{% url 'user_page' userinfo.username %}">
+        <a href="{% url 'user_page' userinfo.username %}" target="_blank">
         <button
                 class="btn btn-primary mt-2"
-                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View User Page</button>
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View User Page
+        </button>
         </a>
     </div>
 
