Remove target="_blank" from user page links
The 'target="_blank"' attribute was removed from the user page links in user_listings.html and user_resume.html templates. This change will prevent the user page from opening in a new tab or window, ensuring a more streamlined navigation experience.

--- a/website/templates/user_listings.html
+++ b/website/templates/user_listings.html
@@ -183,7 +183,7 @@
                                         </div>
                                     </form>
                             {% endif %}
-                            <a href="{% url 'user_page' userinfo.username %}" target="_blank">
+                            <a href="{% url 'user_page' userinfo.username %}">
                             <button
                                     class="btn btn-primary mt-2"
                                     style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View User Page
