Update style and user contact links
Updated CSS styles and changed email contact info to clickable links in user listings, home, and user resume templates. Also, modified the service description in the home template to emphasize AI role in building resumes and cover letters.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -85,8 +85,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Resume Cover Letters</a></h4>
-              <p>Allow our AI system to produce customized cover letters specifically tailored to the job listing you're applying for.</p>
+              <h4><a href="">AI Resume Builder</a></h4>
+              <p>Have our AI build cover letters and help you generate compelling task descriptions for your resume.</p>
             </div>
           </div>
 
