--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -9,6 +9,14 @@
                     </div>
                 </div>
             <div class="col 8">
+            <div class="alert alert-success" role="alert">
+              <h4 class="alert-heading">Attention</h4>
+              <p>
+                 When you post your open position, please allow a few hours for it to appear in the search results.
+                  Job postings must be structured and stored properly for the AI system to process them. We are working
+                  on a system to enable real-time listing.
+              </p>
+            </div>
               <h3>Messages</h3>
              <table class="table table-hover table-bordered">
                   <thead class="table-dark">
