Add notice about free services on home and recruiter profile pages
A new notice has been added to the website's home page and recruiter profile page, informing users that our service is currently free of charge while we ensure the optimal functioning of our AI system. This addition aims to provide transparency to users about the ongoing development and refinement of the system.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -103,6 +103,7 @@
           <div class="section-title">
           <h2>Recruiter</h2>
           <p>Hire Talented People</p>
+            <h2>Our service is currently free of charge as we ensure our AI system is functioning optimally.</h2>
         </div>
         <div class="image col-lg-6" style='background-image: url("{% static 'assets/img/features.jpg' %}");' data-aos="fade-right"></div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
