--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -15,6 +15,8 @@
                  When you post your open position, please allow a few hours for it to appear in the search results.
                   Job postings must be structured and stored properly for the AI system to process them. We are working
                   on a system to enable real-time listing.
+                  <hr />
+              Our service is currently free of charge as we ensure our AI system is functioning optimally.
               </p>
             </div>
               <h3>Messages</h3>
